<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <string name="app_name">WorldFood</string>
    <string name="title_activity_splash_screen">WorldFood</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_add_card">Add Card</string>
    <string name="title_activity_success">Success</string>

    <!-- OrderDetailsActivity -->
    <string name="quantity">QUANTITY</string>
    <string name="dish">DISH</string>
    <string name="price">PRICE</string>
    <string name="delivery">DELIVERY ADDRESS</string>
    <string name="post_code">Postcode</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="add_card_button">Add Card</string>
    <string name="purchase_button">Confirm Purchase</string>
    <string name="paypal_button">Buy with PayPal</string>
    <string name="stored_cards">Stored Cards</string>
    <string name="dummy_address">A Street</string>
    <string name="dummy_city">The City</string>
    <string name="dummy_postcode">000 000</string>
    <string name="delete_card_title">Delete Card</string>
    <string name="delete_card_message">Do you want to delete this card?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_payment_method">You must select a payment method</string>
    <string name="delivery_address_required">Delivery address is required</string>
    <string name="ok">OK</string>
    <string name="response_error">Response Error</string>
    <string name="worldpay_error">WorldPay Error</string>
    <string name="order_failed">Order failed</string>
    <string name="unable_to_order">Unable to complete your purchase.\nPlease try again</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="confirm_purchase_message">At this point you should connect to your own server and complete the purchase from there.</string>

    <!-- ThreeDsOrderActivity -->
    <string name="json_parse_fail">JSON parsing failed.</string>
    <string name="error_in_response">Error while trying to get response.</string>
    <string name="no_network">There is no network connectivity</string>

    <!-- Content Descriptions -->
    <string name="cd_worldfood_logo">WorldFood Logo</string>
    <string name="cd_order_successful">Order Successful</string>
    <string name="cd_order_time">Order Time</string>

    <!-- Settings -->
    <string name="back">Back</string>
    <string name="three_ds_key">3d_secure_key</string>
    <string name="three_ds_title">3-D Secure</string>
    <string name="client_key">api_client_key</string>
    <string name="client_key_value">T_C_20a3f5ad-11f9-409c-b7b6-7171f5269354</string>
    <string name="client_key_title">Client Key</string>
    <string name="service_key">api_service_key</string>
    <string name="service_key_value">T_S_1a54d3d9-0c81-4480-9483-1a3ff8b80d95</string>
    <string name="service_key_title">Service Key</string>
    <string name="dummy_address_key">dummy_address</string>
    <string name="dummy_address_title">Fill dummy address</string>
    <string name="paypal_redirect_url_title">PayPal Redirect URL</string>
    <string name="paypal_redirect_url_key">pp_redirect_url</string>
    <string name="paypal_redirect_url_value">https://online.worldpay.com/simulators/apm/</string>
    <string name="paypal_redirect_url_summary">HTTPS address of PayPal site.</string>
    <string name="paypal_pending_url_title">PayPal Pending URL</string>
    <string name="paypal_pending_url_key">pp_pending_url</string>
    <string name="paypal_pending_url_summary">HTTPS address of pending payment page.</string>
    <string name="paypal_success_url_title">PayPal Success URL</string>
    <string name="paypal_success_url_key">pp_success_url</string>
    <string name="paypal_success_url_summary">HTTPS address of order confirmation page.</string>
    <string name="paypal_cancel_url_title">PayPal Cancel URL</string>
    <string name="paypal_cancel_url_key">pp_cancel_url</string>
    <string name="paypal_cancel_url_summary">HTTPS address of order cancellation page.</string>
    <string name="paypal_failure_url_title">PayPal Failure URL</string>
    <string name="paypal_failure_url_key">pp_failure_url</string>
    <string name="paypal_failure_url_summary">HTTPS address of failure page.</string>

    <!-- OrderConfirmationActivity -->
    <string name="thank">Thank You!</string>
    <string name="order_completed">Your order has been placed</string>
    <string name="order">Order</string>
    <string name="add">Add</string>
    <string name="deliver">We will deliver</string>
    <string name="minutes">your order in the next 30 minutes</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

    <!-- PayPalOrderActivity -->
    <string name="paypal_pending_url_default">https://github.com/Worldpay/worldpay-lib-android/pending</string>
    <string name="paypal_success_url_default">https://github.com/Worldpay/worldpay-lib-android/success</string>
    <string name="paypal_cancel_url_default">https://github.com/Worldpay/worldpay-lib-android/cancel</string>
    <string name="paypal_failure_url_default">https://github.com/Worldpay/worldpay-lib-android/failure</string>
</resources>
