<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/thank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/thank"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/padding_medium"
        android:text="@string/order_completed"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/orderSuccessfulImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_order_successful"
        android:src="@drawable/check" />

    <TextView
        android:id="@+id/deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/deliver"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/padding_medium"
        android:text="@string/minutes"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/orderTimeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_order_time"
        android:src="@drawable/clock" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/home"
        android:textColor="#ffff" />
</LinearLayout>
